# docs/swagger.json
@@ -6,6 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/v1",
     "paths": {
         "/create": {
             "post": {
@@ -157,13 +158,15 @@
                         "type": "integer",
                         "description": "Offset for batch",
                         "name": "offset",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Limit for batch",
                         "name": "limit",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -171,7 +174,9 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -192,13 +197,54 @@
                 "summary": "Search for songs",
                 "parameters": [
                     {
-                        "description": "Search parameters",
-                        "name": "search",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.SongSearch"
-                        }
+                        "type": "string",
+                        "description": "Search by group name",
+                        "name": "by_group",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by song name",
+                        "name": "by_song_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by lyrics",
+                        "name": "by_lyrics",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by external link",
+                        "name": "by_link",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search songs from this date",
+                        "name": "date_from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search songs up to this date",
+                        "name": "date_to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for batch",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit for batch",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -298,36 +344,6 @@
                     "type": "string"
                 },
                 "song": {
-                    "type": "string"
-                }
-            }
-        },
-        "domain.SongSearch": {
-            "type": "object",
-            "properties": {
-                "by_group": {
-                    "type": "string"
-                },
-                "by_link": {
-                    "type": "string"
-                },
-                "by_lyrics": {
-                    "type": "string"
-                },
-                "by_song_name": {
-                    "type": "string"
-                },
-                "from": {
-                    "type": "string"
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer",
-                    "minimum": 0
-                },
-                "to": {
                     "type": "string"
                 }
             }
